--- a/buycar/css/buycar.css
+++ b/buycar/css/buycar.css
@@ -1,3 +1,4 @@
+
 .z-buycar{
     width: 100%;
     background-color: #434953;
@@ -197,11 +198,24 @@
     width: 120px;
     height: 45px;
 }
-.buycarmask{
+.z-buycar .z-buycarmask{
     width: 100%;
     height: 100%;
     background-color: #333;
     opacity: 0.5;
     z-index: 200;
+    position: relative;
     display: none;
+}
+.z-buycarmask .z-changeremove{
+    width: 500px;
+    height: 126px;
+    background-color: #eee;
+    opacity: 1;
+    border-top: 1px solid lightblue;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -63px;
+    margin-top: -250px;
 }
